# helyOS-agent-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: .github-actions.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: README.MD  conf.py
docs/source/apidocs/: helyos_agent_sdk.client.rst  helyos_agent_sdk.connector.rst  helyos_agent_sdk.crypto.rst  helyos_agent_sdk.database_connector.rst  helyos_agent_sdk.exceptions.rst  helyos_agent_sdk.mqtt_client.rst  helyos_agent_sdk.rst  helyos_agent_sdk.summary_request.rst
docs/source/examples/: index.rst
helyos_agent_sdk/: __init__.py  client.py  connector.py  crypto.py  database_connector.py  exceptions.py  models.py  mqtt_client.py  summary_request.py  utils.py
